# Finance-Dashboard

./: app.py  config.py  pyproject.toml
analytics/: forecast.py  stats.py
data/: loader.py
ui/: tab_actual_vs_expected.py  tab_dashboard.py  tab_savings_goal.py
visuals/: plots.py
