[project]
name = "finance-dashboard"
version = "0.1.0"
description = "Personal Finance Dashboard in Streamlit"
authors = [
    {name = "Francois"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "streamlit (>=1.48.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "prophet (>=1.1.7,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
